# mcore-1

./: .gitignore  L7_Atomic_Decay_TNet_Imputation.ipynb  LICENSE  README.md  S3_Cosmological_Crystallization_Analysis.ipynb  S3_Winner_Subset_Characterization.py  pyproject.toml  s3_crystallization_analysis.py  tbr.md
.github/workflows/: python-app.yml
docs/: compass_artifact_wf-b627c681-27ed-403e-a911-13ab83494a8d_text_markdown.md
notebooks/: mcore1_demo.ipynb
src/mcore_py/: __init__.py  algebra.py  base64tme.py  checker.py  cli.py  model.py  mss.py  tme6.py
src/mcore_py/overlays/: __init__.py  quantitative_metrics.py  stubs.py
src/mcore_py/parsers/: __init__.py
src/mcore_py/renderers/: __init__.py  terminal.py  token_stream.py
tests/: GALATIC-ROTATION-CURVE-TEST.ipynb  __init__.py  test_mcore.py  test_s3_analysis_scripts.py
